--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,13 +2,15 @@
   <div class="col sm-col-9 px2">
     <h3 class="mb2">About me</h3>
 
-  <p>My name is Hai-Nguyen Nguyen, <b>Hann</b> for short. </p>
+  <p>My name is Hai-Nguyen (Hann) Nguyen. My last name "Nguyen" can be pronounced as "Wien".</p>
 
   <p>
-  I am currently a Ph.D. candidate in Robotics at <a href="{{ site.snu }}">Seoul National University</a>, Korea. Before that, I was a permanent researcher at <a href="{{ site.vast }}">Vietnam Academy Of Science And Technology</a>, Vietnam.</p>
+  I am currently a Research Associate at <a href="{{ site.lab }}"> Aerial Robotics Lab</a> at <a href="{{ site.imperial }}">Imperial College London</a>, UK, working together with <a href="http://www.imperial.ac.uk/people/m.kovac">Dr. Mirko Kovac</a>. 
+</p>
+<p>
+  I obtained my Ph.D. in Mechanical Engineering in February 2018 from <a href="{{ site.snu }}">Seoul National University</a>, Korea with <a href="https://www.inrol.snu.ac.kr/dongjun-lee">Prof. Dongjun Lee</a> as academic advisor. Before that, I was a permanent researcher at <a href="{{ site.vast }}">Vietnam Academy Of Science And Technology</a>, Vietnam.</p>
 
-<p>My current research interests include
-    dynamics and controls problems related to aerial manipulation. Please see <a href="{{ site.nav.main.cv }}">my CV</a> or <a href="{{ site.nav.main.research }}">my research</a> for more details.</p>
+<p>My current research focus is on designing control and planning algorithms that enable aerial vehicles to physically interact with the environment. Please see <a href="{{ site.nav.main.cv }}">my CV</a> or <a href="{{ site.nav.main.research }}">my research</a> for more details.</p>
 
   </div>
   <div class="col sm-col-3 px2">
