--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
   <div class="col sm-col-9 px2">
     <h3 class="mb2">About me</h3>
 
-<p>My name is <u>Ha</u>i-<u>N</u>guyen <u>N</u>guyen, also known by abbreviation, HANN.</p>
+<p>My name is <u>Ha</u>i-<u>N</u>guyen <u>N</u>guyen, alias Hann. My last name "Nguyen" can be pronounced as "Wien".</p>
   <p>
   I am currently a Research Associate at <a href="{{ site.lab }}"> Aerial Robotics Lab</a> at <a href="{{ site.imperial }}">Imperial College London</a>, UK, working together with <a href="http://www.imperial.ac.uk/people/m.kovac">Dr. Mirko Kovac</a>. 
 </p>
