update about w/ LAAS

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,15 +2,18 @@
   <div class="col sm-col-9 px2">
     <h3 class="mb2">About me</h3>
 
-  <p>My name is <u>Ha</u>i-<u>N</u>guyen <u>N</u>guyen, alias, Hann. My last name "Nguyen" can be pronounced as "Wien".</p>
+  <p>My name is <u>Ha</u>i-<u>N</u>guyen <u>N</u>guyen. I am also known by my initials as Hann, which is <a href="https://en.wikipedia.org/wiki/Courtesy_name"> a writen name</a>  in Vietnamese culture. My family name, "Nguyen," is pronounced "Wien."</p>
 
   <p>
-  I am currently a Research Associate at <a href="{{ site.lab }}"> Aerial Robotics Lab</a> at <a href="{{ site.imperial }}">Imperial College London</a>, UK, working together with <a href="http://www.imperial.ac.uk/people/m.kovac">Dr. Mirko Kovac</a>.
-</p>
-<p>
-  I obtained my Ph.D. in Mechanical Engineering in February 2018 from <a href="{{ site.snu }}">Seoul National University</a>, Korea with <a href="https://www.inrol.snu.ac.kr/dongjun-lee">Prof. Dongjun Lee</a> as academic advisor. Before that, I was a permanent researcher at <a href="{{ site.vast }}">Vietnam Academy Of Science And Technology</a>, Vietnam.</p>
-
-<p>My current research focus is on designing control and planning algorithms that enable aerial vehicles to physically interact with the environment. Please see <a href="{{ site.nav.main.cv }}">my CV</a> or <a href="{{ site.nav.main.research }}">my research</a> for more details.</p>
+    Since July 2021, I have been a Contract Research Scientist at <a href="{{ site.imperial }}">LAAS-CNRS</a>, France, working together with <a href="{{ site.snu }}"> Dr. Simon Laxcroix</a>.
+  </p> 
+  <p>
+    In February 2018, I earned my PhD. in Mechanical and Aerospace Engineering in February 2018 from Seoul National University in Korea, where my academic advisor was <a href="https://www.inrol.snu.ac.kr/dongjun-lee">Prof. Dongjun Lee</a>. From 2018 to 2020, I was a Research Associate at Aerial Robotics Lab at Imperial College London, working with <a href="http://www.imperial.ac.uk/people/m.kovac">Prof. Mirko Kovac</a>. I also spent one year (2020-2021) developing autonomous vehicles for inventory applications with Vimaan Robotics, Inc., in California, USA (remotely due to COVID-19 and visa delay).
+  </p>
+  
+  <p>
+    My research is in the field of control theory and autonomous systems. My current focus is on empowering aerial robots with advanced manipulation capabilities with the emphasis on Robustness and dexterity.
+  </p>
 
   </div>
   <div class="col sm-col-3 px2">
